--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #fff;
+  background-color: #FFE;
   color: #333;
   margin: 33px; }
 
@@ -29,9 +29,11 @@ th {
 td {
   padding: 0 5px 7px; }
 
-div.field,
-div.actions {
+div.field {
   margin-bottom: 10px; }
+
+div.actions
+
 
 #notice {
   color: green; }
@@ -63,3 +65,17 @@ div.actions {
 
 label {
   display: block; }
+
+.address {
+  position: relative;
+  padding: 5px 26px 5px 42px;
+  background: #fff0d9;
+  font-size: 20px;
+  font-weight: bold;
+  color: #2d2d2d;
+  margin-left: -7px;
+  margin-right: 880px;
+  line-height: 1.3;
+  border-bottom: solid 3px orange;
+  z-index:-2;
+}
