jsが動いているか確認

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,9 @@
 
 <div class="address">アドレス帳</div>
 
+<h1 id="aiueo">これはテストです</h1>
+
+<%= javascript_pack_tag 'new' %>
 <table>
   <thead>
     <tr>
