jsによる年齢計算1

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :年齢 %>
-    <%= form.number_field :age, in:0..130, :required => true %>
+    <%= form.label :生年月日（例：1995年1月1日→19950101） %>
+    <%= form.number_field :age %>
   </div>
 
   <div class="actions">
