--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,9 @@
 
 <p>
   <strong>年齢:</strong>
-  <%= @user.age %>
+  <input type="hidden" id="aaa" value="<%= @user.age %>">
+  <%= javascript_pack_tag 'new' %>
+  <div id="edit_area"></div>
 </p>
 
 <%= link_to '編集', edit_user_path(@user) %> |
