--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,13 +10,19 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+  
   <tbody>
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
         <td><%= user.address %></td>
-        <td><%= user.age %></td>
+        <td id="a_area"></td>
+        <input type="hidden" id="aaa" value="<%= user.age %>">
+        <%= javascript_pack_tag 'new' %>
+        
+        <script>
+          document.getElementById('a_area').innerHTML = ageage + "歳" ;
+        </script>
         <td><%= link_to '詳細', user %></td>
         <td><%= link_to '編集', edit_user_path(user) %></td>
         <td><%= link_to '削除', user, method: :delete, data: { confirm: '本当に削除しますか?' } %></td>
