--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<div class="address">登録情報変更</div>
+<div class="address"><%= t('edit.title') %></div>
 
 <%= render 'form', user: @user %>
 
-<%= link_to '詳細', @user %> |
-<%= link_to '戻る', users_path %>
+<%= link_to t('edit.detail'), @user %> |
+<%= link_to t('edit.return'), users_path %>
