--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,29 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>名前:</strong>
+  <strong><%= t('new.name') %>:</strong>
   <%= @user.name %>
 </p>
 
 <p>
-  <strong>住所:</strong>
+  <strong><%= t('new.address') %>:</strong>
   <%= @user.address %>
 </p>
 <div class="bbb">
 <p>
 
-  <strong>年齢:</strong>
+  <strong><%= t('index.age') %>:</strong>
   <div id="age_area"></div>
   
   <input type="hidden" id="aaa" value="<%= @user.age %>">
   <%= javascript_pack_tag 'new' %>
   
   <script>
-    document.getElementById('age_area').innerHTML = ageage + "歳" ;
+    document.getElementById('age_area').innerHTML = ageage + "<%= t('index.sai') %>" ;
   </script>
   
   
 </p>
 </div>
-<%= link_to '編集', edit_user_path(@user) %> |
-<%= link_to '戻る', users_path %>
+<%= link_to t('edit.edit'), edit_user_path(@user) %> |
+<%= link_to t('edit.return'), users_path %>
