--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,6 +30,6 @@
   </div>
 
   <div class="actions">
-  <input type="submit" name="commit" value=<%= t('register') %> data-disable-with="Create User">
+  <input type="submit"  class="btn_01" name="commit" value=<%= t('register') %> data-disable-with="Create User">
   </div>
 <% end %>
