--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -67,15 +67,61 @@ label {
   display: block; }
 
 .address {
+  margin:  0;                 /* デフォルトCSS打ち消し */
+  font-size:  24px;           /* 文字サイズ指定 */
+  position:  relative;        /* 位置調整 */
+  font-weight:  normal;       /* 文字の太さ調整 */
+  display:  inline-block;     /* インラインブロックにする */
+  background-color: #feeaac;  /* 背景色指定 */
+  padding:  10px;             /* 余白指定 */
+  margin-bottom: 15px;        /* 周りの余白指定 */
+  border-radius:  2px;        /* 角丸指定 */
+  font-family: serif;
+}
+.address:before {
+  content:  '';               /* 空白の要素を作る */
+  background-color: #b3b3b3;  /* 背景色指定 */
+  display:  block;            /* ブロック要素にする */
+  position:  absolute;        /* 位置調整 */
+  left: 50%;                  /* 位置調整 */
+  height: 60%;                /* 高さ指定 */
+  top: 26%;                   /* 位置調整 */
+  z-index:  -1;               /* 重なり調整 */
+  width: 46%;                 /* 幅指定 */
+  box-shadow: 0 0 8px 8px #b3b3b3;/* 影指定 */
+  transform: rotate(3deg);    /* 回転 */
+}
+.btn_01 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  border: 1px solid #228bc8;
+  box-sizing: border-box;
+  color: #228bc8;
+  font-size: 16px;
+  text-align: left;
+  text-decoration: none;
   position: relative;
-  padding: 5px 26px 5px 42px;
-  background: #fff0d9;
-  font-size: 20px;
-  font-weight: bold;
-  color: #2d2d2d;
-  margin-left: -7px;
-  margin-right: 880px;
-  line-height: 1.3;
-  border-bottom: solid 3px orange;
-  z-index:-2;
+  transition-duration: 0.2s;
+}
+.btn_01:hover {
+  background: #228bc8;
+  color: #fff;
+}
+.btn_01:before {
+  content: "";
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 7px 0 7px 8px;
+  border-color: transparent transparent transparent #228bc8;
+  position: absolute;
+  top: 50%;
+  left: 6%;
+  margin-top: -7px;
+}
+.btn_01:hover:before {
+  border-color: transparent transparent transparent #fff;
 }
