--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -37,9 +37,9 @@
           age = ageCalculation( new Date(birthdate) , new Date() );
           document.getElementById("user_age<%= idx %>").innerHTML = age + "<%= t('index.sai') %>" ;
         </script>
-        <td><%= link_to t('edit.detail'), user %></td>
-        <td><%= link_to t('edit.edit'), edit_user_path(user) %></td>
-        <td><%= link_to t('edit.delete'), user, method: :delete, data: { confirm: t('edit.alert') } %></td>
+        <td><%= link_to t('edit.detail'), user, class: "custom-btn btn-02" %></td>
+        <td><%= link_to t('edit.edit'), edit_user_path(user), class: "custom-btn btn-02" %></td>
+        <td><%= link_to t('edit.delete'), user, method: :delete, data: { confirm: t('edit.alert') }, class: "custom-btn btn-02" %></td>
       </tr>
     <% end %>
   </tbody>
