css変更3+js不具合修正

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -96,9 +96,9 @@ label {
   justify-content: center;
   align-items: center;
   background: #fff;
-  border: 1px solid #228bc8;
+  border: 1px solid black;
   box-sizing: border-box;
-  color: #228bc8;
+  color: black;
   font-size: 16px;
   text-align: left;
   text-decoration: none;
@@ -106,7 +106,7 @@ label {
   transition-duration: 0.2s;
 }
 .btn_01:hover {
-  background: #228bc8;
+  background: black;
   color: #fff;
 }
 .btn_01:before {
@@ -116,7 +116,7 @@ label {
   height: 0;
   border-style: solid;
   border-width: 7px 0 7px 8px;
-  border-color: transparent transparent transparent #228bc8;
+  border-color: transparent transparent transparent black;
   position: absolute;
   top: 50%;
   left: 6%;
@@ -169,4 +169,28 @@ label {
   border-color: #000;
   height: 100%;
   width: 100%;
+}
+
+.btn-03 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  text-decoration: none;
+  color: #333333;
+  font-size: 18px;
+  border-radius: 0px;
+  width: 90px;
+  height: 40px;
+  font-weight: bold;
+  border: 2px solid #333333;
+  transition: 0.3s;
+  box-shadow: 5px 5px 0px 0px rgba(51, 51, 51, 1);
+  background-color: #FFFFFF;
+}
+
+.btn-03:hover {
+  box-shadow: 0 0 #333;
+  color: #fff;
+  background-color: #333;
 }
