--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to t('edit.return'), users_path %>
+<%= link_to t('edit.return'), users_path, class: "custom-btn btn-02" %>
