--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,5 +25,5 @@
   
 </p>
 </div>
-<%= link_to t('edit.edit'), edit_user_path(@user) %> |
-<%= link_to t('edit.return'), users_path %>
+<%= link_to t('edit.edit'), edit_user_path(@user), class: "custom-btn btn-02" %> |
+<%= link_to t('edit.return'), users_path, class: "custom-btn btn-02" %>
