ログイン機能1、js不具合修正

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to t('edit.detail'), @user, class: "custom-btn btn-02" %> |
+<%= link_to t('edit.detail'), @user, class: "custom-btn btn-02", data: {"turbolinks" => false} %> |
 <%= link_to t('edit.return'), users_path, class: "custom-btn btn-02" %>
